2004-02-15  Derek Price  <derek@ximbiot.com>

	* NEWS: Note GNULIB updates.

2004-02-12  Derek Price  <derek@ximbiot.com>

	* NEWS: Note Mark D. Baushke's recent memory leak plugs.

2004-02-12  Derek Price  <derek@ximbiot.com>

	* NEWS: Note Ville Skyttä's other recent man page patch.

2004-02-12  Derek Price  <derek@ximbiot.com>

	* NEWS: Note lock wait seg fault fix.

2004-02-11  Derek Price  <derek@ximbiot.com>

	* NEWS: Note :fork: segfault avoidance.

2004-02-11  Derek Price  <derek@ximbiot.com>

	* NEWS: Note readability improvements.

2004-02-10  Derek Price  <derek@ximbiot.com>

	* NEWS: Note dying gasp check.

2004-02-10  Derek Price  <derek@ximbiot.com>

	* NEWS: Note flow control pipe race fix.

2004-02-10  Derek Price  <derek@ximbiot.com>

	* BUGS: Note problems building with MSVC++ under Windows and
	workaround.
	* INSTALL: Ditto.

2004-02-10  Derek Price  <derek@ximbiot.com>

	* cvsnt.mak: Add stack.c and stack.h in order to compile under Windows.
	* README: Update copyright notice.

2004-02-09  Derek Price  <derek@ximbiot.com>

	* NEWS: Note new tests in sanity.sh.

2004-02-06  Derek Price  <derek@ximbiot.com>

	* README: Undo accidental overwrite.

2004-02-04  Derek Price  <derek@ximbiot.com>

	* NEWS: Note that alias module recursion is now more comprehensive.

2004-02-03  Derek Price  <derek@ximbiot.com>

	* NEWS: Note case insensitive client directory case preservation.

2004-02-02  Derek Price  <derek@ximbiot.com>

	* NEWS: Correct "error message" from two commits back to read
	"status mesage".

2004-02-02  Derek Price  <derek@ximbiot.com>

	* NEWS: Note new join-rm tests.

2004-02-02  Derek Price  <derek@ximbiot.com>

	* NEWS: Note update error message correction.

2004-02-02  Derek Price  <derek@ximbiot.com>

	* NEWS: Note that the server no longer claims to support the "Case"
	request.

2004-02-02  Derek Price  <derek@ximbiot.com>

	* NEWS: Ammend last note to specify the continued lack of any server