@@ -217,6 +217,7 @@ AM_GNU_GETTEXT([external])
 AM_GNU_GETTEXT_VERSION dnl work around for autoconf-2.57 bug.
 UTILS_FUNC_MKSTEMP
 gl_C_RESTRICT
+gl_FUNC_ALLOCA
 gl_FUNC_ATEXIT
 gl_FUNC_GETHOSTNAME
 gl_FUNC_MEMMOVE
