@@ -1,5 +1,10 @@
 2004-02-15  Derek Price  <derek@ximbiot.com>
 
+	Import alloca module from GNULIB for vasnprintf().
+	* configure.in: Use gl_FUNC_ALLOCA.
+
+2004-02-15  Derek Price  <derek@ximbiot.com>
+
 	* NEWS: Note GNULIB updates.
 
 2004-02-12  Derek Price  <derek@ximbiot.com>
